--- a/nosotros.html
+++ b/nosotros.html
@@ -124,7 +124,24 @@
             cursor: pointer;
             border-radius: 50%;
         }
-        
+        .whatsapp-button {
+            position: fixed;
+            bottom: 20px; /* Ajusta este valor para mover el botón más arriba o más abajo */
+            right: 20px;
+            background-color: #25D366;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            padding: 15px;
+            font-size: 24px;
+            cursor: pointer;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            transition: background-color 0.3s;
+        }
+        .whatsapp-button:hover {
+            background-color: #128C7E;
+        }
         footer {
             background-color: #3b5323;
             padding: 20px;
@@ -171,7 +188,12 @@
             .text-box p {
                 font-size: 0.9em;
             }
-            
+            .whatsapp-button {
+                bottom: 40px; /* Ajusta este valor para mover el botón más arriba en pantallas muy pequeñas */
+                right: 10px;
+                padding: 8px;
+                font-size: 18px;
+            }
         }
     </style>
 </head>
